--- a/css.html.html
+++ b/css.html.html
@@ -19,6 +19,6 @@ body{background-color:red;}
 <li><p>Name of the school studyied in 10'th and 12'th: Sri lathangi vidhya mandhir</p></li>
 <li><p> Residential address:10/246-2,Rose garden,Angalakurichi,Pollachi,Coimbatore</li>
 </body></ol>
-
+</head>
 </html>
 
