--- a/css.html.html
+++ b/css.html.html
@@ -4,7 +4,7 @@ p{color:black;}
 body{background-color:red;}
 </style>
 <body><ol>
-<h1>Bio Data </h1>
+<h1>Bio </h1>
 <li><p>Name: Pranavdeep A.M</p></li>
 <li><p> Date Of Birth: 09/08/2005.</p></li>
 <li><p>Parent's Name:<ol></li>
